@@ -1,3 +1,13 @@
+2012-11-08  Dominik Röttsches  <dominik.rottsches@intel.com>
+
+        Unreviewed, rolling out r133859.
+        http://trac.webkit.org/changeset/133859
+        https://bugs.webkit.org/show_bug.cgi?id=101526
+
+        Breaks EFL bots test execution.
+
+        * Source/cmake/OptionsEfl.cmake:
+
 2012-11-08  Raphael Kubo da Costa  <raphael.kubo.da.costa@intel.com>
 
         [EFL] Turn WTF_USE_TILED_BACKING_STORE in OptionsEfl.cmake.
